--- a/yahya.html
+++ b/yahya.html
@@ -32,7 +32,7 @@
     <tr><td>effectively solve broblem:</td><td>90%</td></tr>
 
     </table>
-    <form><input type="text" placeholder="enter name here..." ></form>
+    <form><input type="text" placeholder="enter name here...." ></form>
     <input type="email" placeholder="enter email here...">
 
     <label>chose number
